// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-popover-menu should render a back button when submenu-id is set: should render a back button when submenu-id is set 1`] = `
<ic-popover-menu anchor="#anchorEl" aria-label="popover-menu" submenu-id="submenu">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <div class="menu" id="ic-popover-submenu-submenu">
      <span>
        <span>
          <span role="menu">
            <ic-menu-item class="ic-popover-submenu-back-button" id="ic-popover-submenu-back-button-1" variant="default">
              <template shadowrootmode="open" shadowrootdelegatesfocus>
                <ic-button aria-disabled="false" aria-haspopup="menu" aria-label="Go back to parent menu" fullwidth="" role="menuitem" variant="tertiary">
                  <div class="focus-border">
                    <span class="icon">
                      <slot name="icon"></slot>
                    </span>
                    <div class="menu-item-info">
                      <div class="menu-labels">
                        <ic-typography class="menu-item-label">
                          Back
                        </ic-typography>
                      </div>
                    </div>
                  </div>
                </ic-button>
              </template>
              <svg class="submenu-back-icon" fill="none" slot="icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M20 11H7.83L13.42 5.41L12 4L4 12L12 20L13.41 18.59L7.83 13H20V11Z" fill="currentColor"></path>
              </svg>
            </ic-menu-item>
          </span>
          <ic-typography class="parent-label" variant="subtitle-small"></ic-typography>
        </span>
        <div aria-label="popover-menu, within nested level 1 undefined submenu," class="menu-body" role="menu">
          <slot></slot>
        </div>
      </span>
    </div>
  </template>
  <ic-menu-item label="Button 1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-disabled="false" aria-label="Button 1" fullwidth="" role="menuitem" variant="tertiary">
        <div class="focus-border">
          <div class="menu-item-info">
            <div class="menu-labels">
              <ic-typography class="menu-item-label">
                Button 1
              </ic-typography>
            </div>
          </div>
        </div>
      </ic-button>
    </template>
  </ic-menu-item>
  <ic-menu-item label="Button 2" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-disabled="false" aria-label="Button 2" fullwidth="" role="menuitem" variant="tertiary">
        <div class="focus-border">
          <div class="menu-item-info">
            <div class="menu-labels">
              <ic-typography class="menu-item-label">
                Button 2
              </ic-typography>
            </div>
          </div>
        </div>
      </ic-button>
    </template>
  </ic-menu-item>
</ic-popover-menu>
`;

exports[`ic-popover-menu should render a menu item and menu group: should render a menu item and menu group 1`] = `
<ic-popover-menu anchor="#anchorEl" aria-label="popover-menu">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <div class="menu" id="ic-popover-submenu-undefined">
      <span>
        <div aria-label="popover-menu" class="menu-body" role="menu">
          <slot></slot>
        </div>
      </span>
    </div>
  </template>
  <ic-menu-item label="Button 1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-disabled="false" aria-label="Button 1" fullwidth="" role="menuitem" variant="tertiary">
        <div class="focus-border">
          <div class="menu-item-info">
            <div class="menu-labels">
              <ic-typography class="menu-item-label">
                Button 1
              </ic-typography>
            </div>
          </div>
        </div>
      </ic-button>
    </template>
  </ic-menu-item>
  <ic-menu-group aria-label="Button group" label="Button group" role="group">
    <template shadowrootmode="open">
      <ic-typography variant="subtitle-small">
        Button group
      </ic-typography>
      <span class="menu-items-wrapper">
        <slot></slot>
      </span>
    </template>
    <ic-menu-item label="Group button 1" variant="destructive">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <ic-button aria-disabled="false" aria-label="Group button 1, destructive, Button group menu group" fullwidth="" role="menuitem" variant="tertiary">
          <div class="focus-border">
            <div class="menu-item-info">
              <div class="menu-labels">
                <ic-typography class="menu-item-label">
                  Group button 1
                </ic-typography>
              </div>
            </div>
          </div>
        </ic-button>
      </template>
    </ic-menu-item>
    <ic-menu-item label="Group button 2" variant="default">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <ic-button aria-disabled="false" aria-label="Group button 2, Button group menu group" fullwidth="" role="menuitem" variant="tertiary">
          <div class="focus-border">
            <div class="menu-item-info">
              <div class="menu-labels">
                <ic-typography class="menu-item-label">
                  Group button 2
                </ic-typography>
              </div>
            </div>
          </div>
        </ic-button>
      </template>
    </ic-menu-item>
  </ic-menu-group>
</ic-popover-menu>
`;

exports[`ic-popover-menu should render on a dialog 1`] = `
<ic-dialog class="ic-dialog-hidden">
  <template shadowrootmode="open">
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4"></ic-typography>
            </slot>
          </div>
        </div>
        <ic-button aria-label="Dismiss" class="close-icon" variant="icon">
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
      <div class="dialog-controls">
        <ic-button class="dialog-control-button" variant="tertiary">
          Cancel
        </ic-button>
        <ic-button class="dialog-control-button" data-gets-focus variant="primary">
          Confirm
        </ic-button>
      </div>
    </dialog>
  </template>
  <ic-button data-gets-focus id="anchorEl"></ic-button>
  <ic-popover-menu anchor="#anchorEl" aria-label="popover-menu" class="ic-popover-menu-open" data-popper-placement="bottom-start" data-popper-reference-hidden open="" style="position: absolute; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="menu" id="ic-popover-submenu-undefined">
        <span>
          <div aria-label="popover-menu" class="menu-body" role="menu">
            <slot></slot>
          </div>
        </span>
      </div>
    </template>
    <ic-menu-item label="Button 1" variant="default">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <ic-button aria-disabled="false" aria-label="Button 1" fullwidth="" role="menuitem" variant="tertiary">
          <div class="focus-border">
            <div class="menu-item-info">
              <div class="menu-labels">
                <ic-typography class="menu-item-label">
                  Button 1
                </ic-typography>
              </div>
            </div>
          </div>
        </ic-button>
      </template>
    </ic-menu-item>
    <ic-menu-item label="Button 2" variant="default">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <ic-button aria-disabled="false" aria-label="Button 2" fullwidth="" role="menuitem" variant="tertiary">
          <div class="focus-border">
            <div class="menu-item-info">
              <div class="menu-labels">
                <ic-typography class="menu-item-label">
                  Button 2
                </ic-typography>
              </div>
            </div>
          </div>
        </ic-button>
      </template>
    </ic-menu-item>
  </ic-popover-menu>
</ic-dialog>
`;

exports[`ic-popover-menu should render when anchor starts with #: should render when target starts with # 1`] = `
<ic-popover-menu anchor="#anchorEl" aria-label="popover-menu">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <div class="menu" id="ic-popover-submenu-undefined">
      <span>
        <div aria-label="popover-menu" class="menu-body" role="menu">
          <slot></slot>
        </div>
      </span>
    </div>
  </template>
  <ic-menu-item label="Button 1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-disabled="false" aria-label="Button 1" fullwidth="" role="menuitem" variant="tertiary">
        <div class="focus-border">
          <div class="menu-item-info">
            <div class="menu-labels">
              <ic-typography class="menu-item-label">
                Button 1
              </ic-typography>
            </div>
          </div>
        </div>
      </ic-button>
    </template>
  </ic-menu-item>
</ic-popover-menu>
`;

exports[`ic-popover-menu should render with anchor: should render with anchor 1`] = `
<ic-popover-menu anchor="anchorEl" aria-label="popover-menu">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <div class="menu" id="ic-popover-submenu-undefined">
      <span>
        <div aria-label="popover-menu" class="menu-body" role="menu">
          <slot></slot>
        </div>
      </span>
    </div>
  </template>
  <ic-menu-item label="Button 1" variant="default">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <ic-button aria-disabled="false" aria-label="Button 1" fullwidth="" role="menuitem" variant="tertiary">
        <div class="focus-border">
          <div class="menu-item-info">
            <div class="menu-labels">
              <ic-typography class="menu-item-label">
                Button 1
              </ic-typography>
            </div>
          </div>
        </div>
      </ic-button>
    </template>
  </ic-menu-item>
</ic-popover-menu>
`;
